--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -37,6 +37,7 @@
     "blueimp-file-upload": "^9.12.4",
     "bootstrap": "^4.0.0-alpha.3",
     "chart.js": "^2.5.0",
+    "classnames": "^2.2.5",
     "create-react-class": "^15.5.2",
     "flux": "^2.1.1",
     "history": "^2.1.1",
