--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -43,6 +43,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.pt-br" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="moip-net" version="0.0.7" targetFramework="net461" developmentDependency="true" />
   <package id="MongoDB.Bson" version="2.2.4" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.2.4" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.2.4" targetFramework="net461" />
