--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AspNet.Identity.MongoDB-2" version="2.0.1" targetFramework="net461" />
+  <package id="bootstrap-sass" version="3.3.5" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Facebook" version="7.0.6" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
