Adicionando novos campos, para a criação de conta Moip

--- a/Ilevus/Web.config
+++ b/Ilevus/Web.config
@@ -15,6 +15,8 @@
     <add key="FacebookAppToken" value="1734579453425836|6bEgCeNnkTBYxXqlO5WLEBGqcp0" />
     <add key="LinkedinClient" value="77si0e657lpx43" />
     <add key="LinkedinSecret" value="KDVvt3aP3U5kVKjF" />
+    <add key="MoipApiAppToken" value="f079f4f0dc9147109534cf360fcb05ed_v2" />
+
   </appSettings>
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -75,7 +77,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Helpers" publicKeyToken="31bf3856ad364e35" />
