--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="AspNet.Identity.MongoDB-2" version="2.0.1" targetFramework="net461" />
+  <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="Facebook" version="7.0.6" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
@@ -46,7 +47,7 @@
   <package id="MongoDB.Bson" version="2.2.4" targetFramework="net461" />
   <package id="MongoDB.Driver" version="2.2.4" targetFramework="net461" />
   <package id="MongoDB.Driver.Core" version="2.2.4" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.7.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
