--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -7,7 +7,7 @@
     "prestart": "npm install",
     "devbuild": "set NODE_ENV=development && webpack --progress --colors -d",
     "devstart": "set NODE_ENV=development && webpack-dev-server --compress --progress --colors --port 8081 --inline --watch --watch-poll",
-    "devwatch": "set NODE_ENV=development && webpack --watch --watch-poll --colors --progress -d",
+    "devwatch": "set NODE_ENV=development && webpack --watch --colors --progress -d",
     "test": "echo \"Error: no test specified\" && exit 1",
     "deploy": "webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize"
   },
