--- a/ilevus.MoipClient/packages.config
+++ b/ilevus.MoipClient/packages.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Moip.NET.V2" version="1.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net452" />
-  <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net452" requireReinstallation="true" />
 </packages>
