--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -281,6 +281,9 @@
     <Content Include="jsx\vendor\moip-assinaturas.js" />
     <Content Include="jsx\vendor\moip.js" />
     <Content Include="jsx\vendor\utils.js" />
+    <Content Include="PoliticaDePrivacidade-EngUs.html" />
+    <Content Include="PoliticaDePrivacidade-Es.html" />
+    <Content Include="PoliticaDePrivacidade-PtBr.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -352,6 +355,7 @@
     <Content Include="jsx\core\view\user\Financial.jsx" />
     <Content Include="jsx\core\view\user\Subscribe.jsx" />
     <Content Include="jsx\core\view\user\HireService.jsx" />
+    <Content Include="jsx\core\view\TermosPrivacidade.jsx" />
     <None Include="package.json" />
     <None Include="Properties\PublishProfiles\Ivan.pubxml" />
     <Content Include="sass\custom\_toast.scss" />
