--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -44,12 +44,13 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.pt-br" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="MongoDB.Bson" version="2.2.4" targetFramework="net461" />
-  <package id="MongoDB.Driver" version="2.2.4" targetFramework="net461" />
-  <package id="MongoDB.Driver.Core" version="2.2.4" targetFramework="net461" />
+  <package id="MongoDB.Bson" version="2.4.4" targetFramework="net461" />
+  <package id="MongoDB.Driver" version="2.4.4" targetFramework="net461" />
+  <package id="MongoDB.Driver.Core" version="2.4.4" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.7.0" targetFramework="net461" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net461" />
 </packages>
