--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -529,6 +529,9 @@
   <ItemGroup>
     <None Include="jsx\core\view\notifications\DetalheNotificacao.jsx" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="jsx\core\view\user\Assessments.jsx" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
