Tela de definições do sistema como por exemplo o caminho onde será salvo os anúncios

--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -519,6 +519,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\pictures\" />
+    <Folder Include="cms\ads\" />
     <Folder Include="Content\" />
   </ItemGroup>
   <ItemGroup>
