--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -51,6 +51,7 @@
     "react-chartjs-2": "^2.0.5",
     "react-color": "^2.11.4",
     "react-dom": "15.4.x",
+    "react-intl": "^2.3.0",
     "react-maskedinput": "^3.2.0",
     "react-router": "^2.4.0",
     "string": "^3.3.1",
