--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -50,6 +50,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.7.0" targetFramework="net461" />
+  <package id="Stripe.net" version="10.4.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net461" />
