--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -524,6 +524,7 @@
     <Folder Include="App_Data\pictures\" />
     <Folder Include="cms\ads\" />
     <Folder Include="Content\" />
+    <Folder Include="lib\react-autocomplete\" />
     <Folder Include="Views\Assessment\" />
   </ItemGroup>
   <ItemGroup>
