--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -55,6 +55,7 @@
     "react-intl": "^2.3.0",
     "react-maskedinput": "^3.2.0",
     "react-router": "^2.4.0",
+    "react-select": "^1.0.0-rc.5",
     "string": "^3.3.1",
     "tether": "^1.3.2",
     "toastr": "^2.1.2",
