--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -230,6 +230,7 @@
     <Compile Include="Controllers\SearchController.cs" />
     <Compile Include="Controllers\MessagesController.cs" />
     <Compile Include="Controllers\SEOController.cs" />
+    <Compile Include="Controllers\SitemapController.cs" />
     <Compile Include="Controllers\SystemController.cs" />
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Enums\UserPermissions.cs" />
@@ -260,6 +261,7 @@
     <Compile Include="Models\AdModels.cs" />
     <Compile Include="Models\NotificationModel.cs" />
     <Compile Include="Models\ScheduleModels.cs" />
+    <Compile Include="Models\SiteMapLogModel.cs" />
     <Compile Include="Models\SystemModels.cs" />
     <Compile Include="Providers\IlevusPermissionsProvider.cs" />
     <Compile Include="Providers\IlevusOAuthProvider.cs" />
@@ -542,6 +544,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="jsx\core\store\Assessments.jsx" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="jsx\core\store\SitemapLog.jsx" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="jsx\core\view\admin\AdminPanelSitemap.jsx" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
