--- a/Ilevus/Web.config
+++ b/Ilevus/Web.config
@@ -16,7 +16,6 @@
     <add key="LinkedinClient" value="77si0e657lpx43" />
     <add key="LinkedinSecret" value="KDVvt3aP3U5kVKjF" />
     <add key="MoipApiAppToken" value="be36c399467d4feab19fce6fd5474c6f_v2" />
-
   </appSettings>
   <log4net>
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -35,7 +34,14 @@
       <appender-ref ref="DefaultConsole" />
     </root>
   </log4net>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6.1" />
+      </system.Web>
+  -->
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
@@ -56,7 +62,6 @@
     <validation validateIntegratedModeConfiguration="false" />
     <httpErrors errorMode="Detailed" />
   </system.webServer>
-
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
