--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -14,10 +14,12 @@
   "author": "Renato R. R. de Oliveira",
   "devDependencies": {
     "autoprefixer": "^6.3.7",
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.22.0",
     "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
@@ -27,6 +29,7 @@
     "node-sass": "^3.6.0",
     "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
+    "react-stripe-checkout": "^2.6.3",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
@@ -36,6 +39,7 @@
     "backbone": "^1.3.3",
     "blueimp-file-upload": "^9.12.4",
     "bootstrap": "^4.0.0-alpha.3",
+    "boron": "^0.2.3",
     "chart.js": "^2.5.0",
     "classnames": "^2.2.5",
     "create-react-class": "^15.5.2",
