--- a/Ilevus/packages.config
+++ b/Ilevus/packages.config
@@ -4,7 +4,9 @@
   <package id="AspNet.Identity.MongoDB-2" version="2.0.1" targetFramework="net461" />
   <package id="AutoMapper" version="6.1.1" targetFramework="net461" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
+  <package id="CSharpMongoMigrations" version="1.1" targetFramework="net462" developmentDependency="true" />
   <package id="Facebook" version="7.0.6" targetFramework="net461" />
+  <package id="LightInject" version="5.0.3" targetFramework="net461" />
   <package id="log4net" version="2.0.5" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core.es" version="2.2.1" targetFramework="net461" />
@@ -50,6 +52,7 @@
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="Owin.Security.Providers.LinkedIn" version="2.7.0" targetFramework="net461" />
+  <package id="Stripe.net" version="10.4.0" targetFramework="net461" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
   <package id="Unity.Interception" version="4.0.1" targetFramework="net461" />
