--- a/Ilevus/package.json
+++ b/Ilevus/package.json
@@ -12,29 +12,29 @@
     "deploy": "webpack --colors --progress --config webpack.production.config.js --optimize-dedupe --optimize-occurrence-order --optimize-minimize"
   },
   "author": "Renato R. R. de Oliveira",
-  "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^6.4.1",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^0.22.0",
-    "exports-loader": "^0.6.2",
-    "extract-text-webpack-plugin": "^0.9.1",
-    "file-loader": "^0.8.4",
-    "imports-loader": "^0.6.5",
-    "json-loader": "^0.5.4",
-    "node-sass": "^3.6.0",
-    "postcss-loader": "^0.9.1",
-    "raw-loader": "^0.5.1",
-    "react-stripe-checkout": "^2.6.3",
-    "sass-loader": "^3.2.0",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.6",
-    "webpack": "1.x"
-  },
+		"devDependencies": {
+				"autoprefixer": "^6.3.7",
+				"babel-core": "^6.26.0",
+				"babel-loader": "^6.4.1",
+				"babel-plugin-transform-class-properties": "^6.24.1",
+				"babel-plugin-transform-object-rest-spread": "^6.26.0",
+				"babel-preset-es2015": "^6.24.1",
+				"babel-preset-react": "^6.24.1",
+				"css-loader": "^0.22.0",
+				"exports-loader": "^0.6.2",
+				"extract-text-webpack-plugin": "^0.9.1",
+				"file-loader": "^0.8.4",
+				"imports-loader": "^0.6.5",
+				"json-loader": "^0.5.4",
+				"node-sass": "^3.6.0",
+				"postcss-loader": "^0.9.1",
+				"raw-loader": "^0.5.1",
+				"react-stripe-checkout": "^2.6.3",
+				"sass-loader": "^3.2.0",
+				"style-loader": "^0.13.0",
+				"url-loader": "^0.5.6",
+				"webpack": "1.x"
+		},
   "dependencies": {
     "backbone": "^1.3.3",
     "blueimp-file-upload": "^9.12.4",
@@ -50,6 +50,7 @@
     "moment": "2.x.x",
     "moment-range": "^2.2.0",
     "numeral": "2.x.x",
+    "popper.js": "^1.12.5",
     "prop-types": "^15.5.8",
     "react": "15.4.x",
     "react-autocomplete": "^1.7.1",
