--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -38,6 +38,7 @@
     "backbone": "^1.3.3",
     "blueimp-file-upload": "^9.12.4",
     "bootstrap": "^4.0.0-alpha.6",
+    "boron": "^0.2.3",
     "chart.js": "^2.5.0",
     "classnames": "^2.2.5",
     "create-react-class": "^15.5.2",
@@ -54,6 +55,7 @@
     "prop-types": "^15.5.8",
     "react": "15.4.x",
     "react-autocomplete": "^1.7.1",
+    "react-boron": "^0.1.4",
     "react-chartjs-2": "^2.0.5",
     "react-color": "^2.11.4",
     "react-doc-meta": "^0.2.0",
@@ -63,6 +65,7 @@
     "react-maskedinput": "^3.2.0",
     "react-router": "^2.4.0",
     "react-select": "^1.0.0-rc.5",
+    "react-stripe-elements": "^1.2.0",
     "string": "^3.3.1",
     "tether": "^1.3.2",
     "toastr": "^2.1.2",
