--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -309,6 +309,9 @@
     <Compile Include="Models\ScheduleModels.cs" />
     <Compile Include="Models\SystemModels.cs" />
     <Compile Include="Models\UserProfessionalEntity.cs" />
+    <Compile Include="MongoMigrations\M003_AdsLogsEntity.cs" />
+    <Compile Include="MongoMigrations\M004_AdsEntity.cs" />
+    <Compile Include="MongoMigrations\M005_Definitions.cs" />
     <Compile Include="Providers\IlevusPermissionsProvider.cs" />
     <Compile Include="Providers\IlevusOAuthProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
