Inclusão do migrations, e correção na subtração do valor quando o anúncio é exibido e quando é clicado.

--- a/Ilevus/Ilevus.csproj
+++ b/Ilevus/Ilevus.csproj
@@ -312,6 +312,7 @@
     <Compile Include="MongoMigrations\M003_AdsLogsEntity.cs" />
     <Compile Include="MongoMigrations\M004_AdsEntity.cs" />
     <Compile Include="MongoMigrations\M005_Definitions.cs" />
+    <Compile Include="MongoMigrations\M006_BalanceEntity.cs" />
     <Compile Include="Providers\IlevusPermissionsProvider.cs" />
     <Compile Include="Providers\IlevusOAuthProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
