Ajustando campos relacionado a dinheiro, e resolvendo problemas restantes da migração.

--- a/Ilevus/Views/package.json
+++ b/Ilevus/Views/package.json
@@ -28,8 +28,10 @@
     "node-sass": "^3.6.0",
     "postcss-loader": "^0.9.1",
     "raw-loader": "^0.5.1",
+    "react-intl-currency-input": "^0.1.8",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.0",
+    "uglifyjs-webpack-plugin": "^1.0.0-rc.0",
     "url-loader": "^0.5.6",
     "webpack-dev-server": "^2.9.1"
   },
